Working Bayes - probably

--- a/data/Task List 1.ipynb
+++ b/data/Task List 1.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,14 +52,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(-15.3315)\n"
+      "tensor(-9.4888)\n"
      ]
     }
    ],
@@ -79,14 +79,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0)\n"
+      "tensor(1)\n"
      ]
     }
    ],
@@ -43594,13 +43594,102 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a simulator (and exact solution utilizing Bayes theorem) for chances to be ill on a certain disease. We know that it affects from about 1 to 100 out of 50,000 people. There was developed a test to check whether the person has the disease and it is quite accurate: the probability that the test result is positive (suggesting the person has the disease), given that the person does not have the disease, is only 2 percent; the probability that the test result is negative (suggesting the person does not have the disease), given that the person has the disease, is only 1 percent. When a random person gets tested for the disease and the result comes back positive, what is the probability that the person has the disease? Check whole parameter space and visualise results.\n",
+    "\n",
+    "    - it must be a simulator!\n",
+    "    - sample from distribution using given probabilities\n",
+    "    - repeate experiment and compare with Bayes equation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "simulate: %d  ; bayes: %d 0 0.00980392156862745\n",
+      "simulate: %d  ; bayes: %d 0 0.01941938014907807\n",
+      "simulate: %d  ; bayes: %d 0 0.028851758305809203\n",
+      "simulate: %d  ; bayes: %d 0 0.03810623556581986\n",
+      "simulate: %d  ; bayes: %d 0 0.04718779790276453\n",
+      "simulate: %d  ; bayes: %d 0 0.05610124669437098\n",
+      "simulate: %d  ; bayes: %d 0 0.06485120718697361\n",
+      "simulate: %d  ; bayes: %d 0 0.07344213649851633\n",
+      "simulate: %d  ; bayes: %d 0 0.08187833118911965\n",
+      "simulate: %d  ; bayes: %d 0 0.09016393442622951\n",
+      "simulate: %d  ; bayes: %d 0 0.09830294276945299\n",
+      "simulate: %d  ; bayes: %d 0 0.10629921259842517\n",
+      "simulate: %d  ; bayes: %d 0 0.11415646620542841\n",
+      "simulate: %d  ; bayes: %d 0 0.1218782975729863\n",
+      "simulate: %d  ; bayes: %d 0 0.12946817785527462\n",
+      "simulate: %d  ; bayes: %d 0 0.13692946058091288\n",
+      "simulate: %d  ; bayes: %d 0 0.1442653865935196\n",
+      "simulate: %d  ; bayes: %d 0 0.1514790887453247\n",
+      "simulate: %d  ; bayes: %d 0 0.15857359635811835\n"
+     ]
+    }
+   ],
+   "source": [
+    "from random import randint\n",
+    "\n",
+    "population_size = 10000\n",
+    "min_sick = 1\n",
+    "max_sick = 100\n",
+    "\n",
+    "positive_healthy_prob = 0.02\n",
+    "negative_sick_prob = 0.01\n",
+    "positive_sick_prob = 1 - negative_sick_prob\n",
+    "negative_healthy_prob = 1 - positive_healthy_prob\n",
+    "\n",
+    "\n",
+    "def simulate_population(sick_people_number):\n",
+    "    sick_prob = sick_people_number/population_size\n",
+    "    positive_prob = positive_sick_prob * sick_prob + positive_healthy_prob * (1 - sick_prob)\n",
+    "    \n",
+    "    positive_number = 0\n",
+    "    sick_positive_number = 0\n",
+    "    \n",
+    "    for i in range(1, population_size + 1):\n",
+    "        is_positive = pyro.sample(\"categorical_sampling\", pyro.distributions.Categorical(logits = torch.tensor([positive_prob, 1 - positive_prob])))\n",
+    "        if is_positive :\n",
+    "            is_positive_sick = pyro.sample(\"categorical_sampling\", pyro.distributions.Categorical(logits = torch.tensor([positive_sick_prob, positive_healthy_prob])))\n",
+    "            if is_positive_sick : sick_positive_number = sick_positive_number + 1\n",
+    "    \n",
+    "    return sick_positive_number / positive_number if positive_number > 0 else 0\n",
+    "\n",
+    "\n",
+    "def count_bayes_prob(sick_people_number):\n",
+    "    sick_prob = sick_people_number / population_size\n",
+    "    healthy_prob = 1 - sick_prob\n",
+    "    positive_prob = positive_sick_prob * sick_prob + negative_sick_prob * healthy_prob\n",
+    "    \n",
+    "    #P(sick|positive) = P(positive|sick) * P(sick) / P(positive)\n",
+    "    sick_positive_prob = positive_sick_prob * sick_prob / positive_prob\n",
+    "    return sick_positive_prob\n",
+    "\n",
+    "for x in range(1, 101):\n",
+    "    print(\"simulate: %d  ; bayes: %d\", simulate_population(x), count_bayes_prob(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "## Insert solution here"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
