--- a/data/Task List 1.ipynb
+++ b/data/Task List 1.ipynb
@@ -43613,25 +43613,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "simulate: %d  ; bayes: %d 0 0.00980392156862745\n",
-      "simulate: %d  ; bayes: %d 0 0.01941938014907807\n",
-      "simulate: %d  ; bayes: %d 0 0.028851758305809203\n",
-      "simulate: %d  ; bayes: %d 0 0.03810623556581986\n",
-      "simulate: %d  ; bayes: %d 0 0.04718779790276453\n",
-      "simulate: %d  ; bayes: %d 0 0.05610124669437098\n",
-      "simulate: %d  ; bayes: %d 0 0.06485120718697361\n",
-      "simulate: %d  ; bayes: %d 0 0.07344213649851633\n",
-      "simulate: %d  ; bayes: %d 0 0.08187833118911965\n",
-      "simulate: %d  ; bayes: %d 0 0.09016393442622951\n",
-      "simulate: %d  ; bayes: %d 0 0.09830294276945299\n",
-      "simulate: %d  ; bayes: %d 0 0.10629921259842517\n",
-      "simulate: %d  ; bayes: %d 0 0.11415646620542841\n",
-      "simulate: %d  ; bayes: %d 0 0.1218782975729863\n",
-      "simulate: %d  ; bayes: %d 0 0.12946817785527462\n",
-      "simulate: %d  ; bayes: %d 0 0.13692946058091288\n",
-      "simulate: %d  ; bayes: %d 0 0.1442653865935196\n",
-      "simulate: %d  ; bayes: %d 0 0.1514790887453247\n",
-      "simulate: %d  ; bayes: %d 0 0.15857359635811835\n"
+      "tensor(2069)\n",
+      "tensor(1935)\n",
+      "simulate: %d  ; bayes: %d tensor(0) 0.00980392156862745\n",
+      "tensor(1973)\n",
+      "tensor(1965)\n",
+      "simulate: %d  ; bayes: %d tensor(0) 0.01941938014907807\n",
+      "tensor(1968)\n",
+      "tensor(1972)\n",
+      "simulate: %d  ; bayes: %d tensor(0) 0.028851758305809203\n",
+      "tensor(2046)\n",
+      "tensor(2019)\n",
+      "simulate: %d  ; bayes: %d tensor(0) 0.03810623556581986\n",
+      "tensor(2021)\n",
+      "tensor(1904)\n",
+      "simulate: %d  ; bayes: %d tensor(0) 0.04718779790276453\n",
+      "tensor(1994)\n",
+      "tensor(1937)\n",
+      "simulate: %d  ; bayes: %d tensor(0) 0.05610124669437098\n",
+      "tensor(2021)\n",
+      "tensor(1917)\n",
+      "simulate: %d  ; bayes: %d tensor(0) 0.06485120718697361\n",
+      "tensor(1938)\n",
+      "tensor(2012)\n",
+      "simulate: %d  ; bayes: %d tensor(0) 0.07344213649851633\n",
+      "tensor(2069)\n",
+      "tensor(1936)\n",
+      "simulate: %d  ; bayes: %d tensor(0) 0.08187833118911965\n",
+      "tensor(1956)\n",
+      "tensor(1965)\n",
+      "simulate: %d  ; bayes: %d tensor(0) 0.09016393442622951\n",
+      "tensor(2016)\n",
+      "tensor(1993)\n",
+      "simulate: %d  ; bayes: %d tensor(0) 0.09830294276945299\n",
+      "tensor(2025)\n",
+      "tensor(2026)\n",
+      "simulate: %d  ; bayes: %d tensor(0) 0.10629921259842517\n"
      ]
     }
    ],
@@ -43650,16 +43667,24 @@
     "\n",
     "def simulate_population(sick_people_number):\n",
     "    sick_prob = sick_people_number/population_size\n",
-    "    positive_prob = positive_sick_prob * sick_prob + positive_healthy_prob * (1 - sick_prob)\n",
     "    \n",
-    "    positive_number = 0\n",
     "    sick_positive_number = 0\n",
+    "    healthy_positive_number = 0\n",
     "    \n",
+    "    positive_prob = positive_sick_prob * sick_prob + positive_healthy_prob * (1 - sick_prob)\n",
+    "\n",
     "    for i in range(1, population_size + 1):\n",
-    "        is_positive = pyro.sample(\"categorical_sampling\", pyro.distributions.Categorical(logits = torch.tensor([positive_prob, 1 - positive_prob])))\n",
-    "        if is_positive :\n",
-    "            is_positive_sick = pyro.sample(\"categorical_sampling\", pyro.distributions.Categorical(logits = torch.tensor([positive_sick_prob, positive_healthy_prob])))\n",
-    "            if is_positive_sick : sick_positive_number = sick_positive_number + 1\n",
+    "        is_sick = pyro.sample(\"categorical_sampling\", pyro.distributions.Categorical(logits = torch.tensor([1 - sick_prob, sick_prob])))\n",
+    "        \n",
+    "        if is_sick:\n",
+    "            sick_positive_number = sick_positive_number + pyro.sample(\"categorical_sampling\", pyro.distributions.Categorical(logits = torch.tensor([1 - positive_sick_prob, positive_sick_prob])))\n",
+    "        else:\n",
+    "            healthy_positive_number = healthy_positive_number + pyro.sample(\"categorical_sampling\", pyro.distributions.Categorical(logits = torch.tensor([1 - positive_healthy_prob, positive_healthy_prob])))\n",
+    "        \n",
+    "    print(healthy_positive_number)\n",
+    "    print(sick_positive_number)\n",
+    "    positive_number = sick_positive_number + healthy_positive_number\n",
+    "            \n",
     "    \n",
     "    return sick_positive_number / positive_number if positive_number > 0 else 0\n",
     "\n",
